<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendario de Mascota</string>
    <string name="tipoEvento">Tipo de Evento</string>
    <string name="descripcionEvento">Descripcion del Evento</string>
    <string name="fechaEvento">Fecha del Evento</string>
    <string name="nombreMascota">Nombre de la Mascota</string>
    <string name="tipoMascota">Tipo de Mascota</string>
    <string name="razaMascota">Raza de la Mascota</string>
    <string name="fechaNacimientoMascota">Fecha de Nacimernto</string>
    <string name="userUsuario">Usuario</string>
    <string name="userNombre">Nombre</string>
    <string name="userApellido">Apellido</string>
    <string name="userMail">E-Mail</string>
    <string name="userTelefono">Telefono</string>
    <string name="userDireccion">Direccion</string>
    <string name="userFechaNac">Fecha de Nacimiento</string>
    <string name="aceptar">Aceptar</string>
    <string name="perfil">Perfil</string>
    <string name="agregar">Agregar Evento</string>
    <string name="agregar_mascota">Agregar Mascota</string>
    <string name="deslogueo">Deslogueo</string>
    <string name="descripcion">Descripcion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_menu">Menu de Eventos</string>
    <string name="title_activity_detalle_evento">Detalle del Evento</string>
    <string name="title_activity_agregar_evento">Agregar Evento</string>
    <string name="title_activity_agregar_mascota">Agregar Mascota</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_perfil">Perfil</string>       
    <string name="Registro">Registrarse</string>
    <string name="btn_OlvideMiContrasena">¿Ovido su Contraseña?</string>
    <string name="btn_ingresar">Aceder</string> 
    <string name="btn_guardar">Guardar</string> 
    <string name="lb_reg_nombre">Nombre</string>
    <string name="lb_reg_usuario">Usuario</string>
    <string name="lb_reg_pass">Contraseña</string>
    <string name="lb_reg_pass2"> Repita su contraseña</string>
    <string name="lb_reg_email">Email</string>
    <string name="lb_reg_fecha_nacimiento">Ingrese la fecha de nacimiento</string>
    <string name="lb_reg_apellido_paterno">Apellido Paterno</string>
    <string name="lb_reg_apellido_materno">Apellido Materno</string>
    <string name="lb_reg_direccion">Ingrese su direccion</string>
    <string name="btn_login">Pantalla de inicio</string>
    <string-array name="tipoEvento">
        <item >Paseo</item>
	    <item >Veterinario</item>	
	    <item >Vacuna</item>
	    <item >Comprar alimento</item>
	    <item >Dar medicamentos</item>
	    <item >Desparasitación</item>
	    <item >Peluqueria</item>
    </string-array>

</resources>
